--- a/app/index.html
+++ b/app/index.html
@@ -54,14 +54,14 @@
       <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light">Ever since, we&rsquo;ve been working to make travel<strong> better for everyone.</strong> </h3>
      
       <div class="wrapper wrapper--medium" >
-        <img src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
+        <img class="lazyload" src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
       </div>
 
       <div class="row row--gutters">
         <div class="row--medium-4">
           <picture>
-            <source srcset="assets/images/our-start.jpg" media="(min-width: 800px)" alt="Our founder, Jane Doe">
-            <img src="assets/images/our-start-landscape.jpg" alt="Our founder, Jane Doe">
+            <source data-srcset="assets/images/our-start.jpg" media="(min-width: 800px)" alt="Our founder, Jane Doe">
+            <img class="lazyload" src="assets/images/our-start-landscape.jpg" alt="Our founder, Jane Doe">
           </picture>
           
         </div>
@@ -127,7 +127,7 @@
         <div class="row--medium-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-jane.jpg">
+              <img class="lazyload" src="assets/images/testimonial-jane.jpg">
             </div>
             <h3 class="testimonial__title">Jane Doe</h3>
             <h4 class="testimonial__subtitle">9 Time Escaper</h4>
@@ -137,7 +137,7 @@
         <div class="row--medium-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-john.jpg">
+              <img class="lazyload" src="assets/images/testimonial-john.jpg">
             </div>
             <h3 class="testimonial__title">John Smith</h3>
             <h4 class="testimonial__subtitle">4 Time Escaper</h4>
@@ -147,7 +147,7 @@
         <div class="row--medium-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-cat.jpg">
+              <img class="lazyload" src="assets/images/testimonial-cat.jpg">
             </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
             <h4 class="testimonial__subtitle">6 Time Escaper</h4>
